force-app/main/default/objects/CCRM_Action_Plan_Template_Selection__mdt/CCRM_Action_Plan_Template_Selection__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to map Opportunity stage changes and related Action plan template</description>
    <label>CCRM Action Plan Template Selection</label>
    <pluralLabel>Action Plan Template Selections</pluralLabel>
</CustomObject>