force-app/main/default/objects/CCRM_Action_Plan_Template_Selection__mdt/fields/Commercial_Segment__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Segment__c</fullName>
    <label>Commercial Segment</label>
    <length>255</length>
    <type>Text</type>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Personal_Information</complianceGroup>
    <description>Commercial segment</description>
</CustomField>