force-app/main/default/objects/CCRM_Action_Plan_Template_Selection__mdt/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <label>Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Personal_Information</complianceGroup>
    <description>Opportunity record type</description>
</CustomField>