force-app/main/default/objects/CCRM_Action_Plan_Template_Selection__mdt/fields/Opportunity_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Name__c</fullName>
    <label>Opportunity Stage Name</label>
    <length>255</length>
    <type>Text</type>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Personal_Information</complianceGroup>
    <description>Opportunity stage name</description>
</CustomField>