force-app/main/default/objects/CCRM_Action_Plan_Template_Selection__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Name of ActionPlanTemplate</description>
    <label>Template Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <complianceGroup>Source_Salesforce;Integrity_Trusted;Privacy_Personal_Information</complianceGroup>
</CustomField>